<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadeBlue"
    android:gravity="center"
    android:padding="16dp"

    tools:context=".ForgotPasswordScreen">


    <TextView
        android:id="@+id/ForgotPassTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgotPassScreen"
        android:textSize="35sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/ForgotPassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPassTitle"
        android:gravity="center"
        android:text="@string/enter_your_email_here_to_get_the_get_reset_password_link"
        android:textSize="20sp">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgotPassTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPassText"
        android:layout_marginTop="25dp"
        android:hint="@string/ForgotPassEmail"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ForgotPassSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPassTextField"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/ForgotPassSubmit">


    </com.google.android.material.button.MaterialButton>

</RelativeLayout>